# googletest-coverage

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: testsubject.cpp  testsubject.h
test/: tester.cpp
